--- a/017 webpack/src/index.html
+++ b/017 webpack/src/index.html
@@ -5,6 +5,8 @@
 	<title>liXH study webpack</title>
 </head>
 <body>
+	<div id="gogo"></div>
+	<div><img src="./images/desertCats.jpg"></div>
 	<div id="tit"></div>
 	<div id="pic"></div>
 </body>
