--- a/测试用.html
+++ b/测试用.html
@@ -6,10 +6,9 @@
 </head>
 <body>
 <script>
-	for(let i=0;i<10;i++){
-		console.log('循环体中:'+i);
-	}
-	console.log('循环体外:'+i);
+	let arr=[0,1,2,3,4,5,6,7,8,9];
+	arr.fill('jspang',2,5);
+	console.log(arr);
 </script>
 </body>
 </html>
