--- a/测试用.html
+++ b/测试用.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <script>
-	let arr=[0,1,2,3,4,5,6,7,8,9];
-	arr.fill('jspang',2,5);
-	console.log(arr);
+    var optionsJson = '{"type":"date","beginYear":2000,"endYear":2016}';
+    var options = JSON.parse(optionsJson);
+    console.log(options);
 </script>
 </body>
 </html>
